@@ -1,3 +1,8 @@
+2010-12-22  Ramon Novoa  <rnovoa@artica.es>
+
+	* util/pandora_recode_db.pl: Removed from repository. Not
+	  needed anymore (kept in the 3.1 branch).
+
 2010-12-22  Sergio Martin <sergio.martin@artica.es>
 
 	* util/pandora_manage.pl: Improved the end of execution
